--- a/kub-nginx.yaml
+++ b/kub-nginx.yaml
@@ -1,4 +1,4 @@
-# Define a namespace for the application
+# Define a namespace for the application nginx
 apiVersion: v1
 kind: Namespace
 metadata:
