--- a/kub-nginx.yaml
+++ b/kub-nginx.yaml
@@ -23,7 +23,7 @@ metadata:
   namespace: my-app-namespace
 type: Opaque
 data:
-  secret-key: c2VjcmV0LXZhbHVl  # Base64 encoded value for the secret
+  secret-key: c2VjcmV0LXZhbHVl  # Example of Base64 encoded value for the secret
 ---
 # Define a Deployment to manage the application pods
 apiVersion: apps/v1
